# fact-check

./: .gitignore  README.md  benchmark.py  benchmark_feverous.py  pyproject.toml  show_evidence.py
scripts/graph_check/: build_index.py
src/impls/events/: base.py  summary.py
src/impls/events/graph_check/: construct_graph.py  context.py  infilling.py
src/impls/workflows/: simple.py  summary.py
src/impls/workflows/graph_check/: construct_graph.py  graph_check.py  infilling.py
src/modules/: evaluator.py
src/modules/datasets/: base.py  vifactcheck.py  viwikifc.py
src/modules/datasets/feverous/: __init__.py  feverous.py
src/modules/datasets/feverous/database/: feverous_db.py  utils.py
src/modules/datasets/feverous/utils/: __init__.py  annotation_processor.py  feveous_utils.py  wiki_element.py  wiki_list.py  wiki_page.py  wiki_section.py  wiki_sentence.py  wiki_table.py
src/modules/prompts/: evidence_simple.py  simple.py  summary.py
src/modules/prompts/graph_check/: construct_graph.py
src/modules/schema/graph_check/: graph.py
src/modules/utils/: __init__.py  utils.py
