[project]
name = "fact-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "datasets>=4.5.0",
    "jsonlines>=4.0.0",
    "llama-index>=0.14.13",
    "mlflow>=3.9.0",
    "scikit-learn>=1.8.0",
]
